# crabgent

./: .gitignore  AGENTS.md  Makefile  README.md  VERSION.txt  config.toml.example
app/: .gitignore  Cargo.toml
app/docs/: crabgent-avatar.html
app/scripts/: flight_dump.py
app/src/: agent.rs  agent_message.rs  audio_native_stt.rs  brand.rs  channel_read_adapter.rs  config.rs  cron_delivery.rs  cron_dispatch.rs  dump_hook.rs  error_audit_hook.rs  flight_recorder.rs  generate_image_tool.rs  hear_again_stt.rs  invite.rs  lib.rs  main.rs  mcp_http.rs  memory_recall_hook.rs  memory_scope.rs  openai_oauth.rs  reasoning_hook.rs  runtime.rs  session_persisting_sink.rs  shell_pre_processor.rs  skill_scope_wrapper.rs  speaker_id.rs  temperature_hook.rs  tmux_channel.rs  tui_activity.rs  tui_channel.rs  tui_client.rs  tui_ws.rs  usage_relay.rs  voice_output.rs  web_admin.rs  web_search_hook.rs  web_voice.rs
app/src/policy/: builder.rs  channel_scope.rs  membership.rs  mod.rs  subject_resolver.rs  visibility.rs
app/templates/: cron.html  login.html  memory.html  relations.html  sessions.html  voice.html
app/tests/: channel_tools_integration.rs  conduit_helper.rs  policy_channel_scope.rs  policy_channel_scope_integration.rs  policy_tool_restriction.rs  policy_user_allowlist.rs  smoke_matrix.rs
app/tests/support/: mod.rs
crabgent/: .gitignore  .jscpd.json  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml
crabgent/.config/: nextest.toml
crabgent/.github/workflows/: ci.yml
crabgent/crabgent-calendar/: Cargo.toml
crabgent/crabgent-calendar/src/: annotate.rs  config.rs  hint_format.rs  hook.rs  lib.rs  provider.rs
crabgent/crabgent-calendar/tests/: timehint_messages_e2e.rs
crabgent/crabgent-channel/: Cargo.toml
crabgent/crabgent-channel-matrix/: Cargo.toml
crabgent/crabgent-channel-matrix/src/: audio_download.rs  channel.rs  config.rs  error.rs  formatting.rs  image_download.rs  inbound.rs  lib.rs  outbound.rs  outbound_react.rs  reaction_tracker.rs  subject.rs  sync.rs  typing.rs
crabgent/crabgent-channel-matrix/tests/: channel_ops.rs  conduit_helper.rs  dm_kind_detection.rs  inbound_image.rs  inbound_reaction.rs  notify_user.rs  policy_integration.rs  send_reaction.rs  send_thread_reply.rs  send_top_level.rs  shared_conduit_reuse.rs  subject_construction.rs  sync_inbound_text.rs  sync_inbound_thread.rs
crabgent/crabgent-channel-slack/: Cargo.toml  README.md
crabgent/crabgent-channel-slack/src/: api.rs  block_kit.rs  channel.rs  channel_helpers.rs  channel_names.rs  config.rs  connection.rs  dispatch.rs  error.rs  events.rs  files_info.rs  formatting.rs  http.rs  ids.rs  image_download.rs  inbox.rs  lib.rs  outbound.rs  socket_mode.rs  socket_mode_mock.rs  subject.rs  typing.rs
crabgent/crabgent-channel-slack/tests/: agent_progress_api.rs  agent_progress_e2e.rs  agent_progress_hook_e2e.rs  api_connections_open.rs  api_conversations_list.rs  api_error_mapping.rs  api_methods.rs  api_post_message.rs  api_rate_limit_max.rs  api_retry.rs  audio_inbound.rs  channel_conv_display.rs  channel_delete.rs  channel_edit.rs  channel_kind_cache.rs  channel_participants.rs  channel_react.rs  channel_read.rs  channel_send_thread_broadcast.rs  channel_send_thread_no_broadcast.rs  channel_send_toplevel.rs  channel_type_cache.rs  channel_upload.rs  config_validation.rs  connection_pool.rs  connection_reconnect.rs  dispatch.rs  forwarder_file_share.rs  ids_invalid.rs  ids_roundtrip.rs  inbound_bot_message.rs  inbound_dm.rs  inbound_mention.rs  inbound_reaction.rs  inbound_thread_started.rs  inbox_e2e.rs  inbox_listener_hook.rs  notify_user.rs  owner_router_compat.rs  pre_warm_channel_names.rs  (+6 more)
crabgent/crabgent-channel-telegram/: Cargo.toml
crabgent/crabgent-channel-telegram/src/: audio_download.rs  channel.rs  formatting.rs  http.rs  image_download.rs  lib.rs  outbound.rs  photo_types.rs  poller.rs  react.rs  typing.rs
crabgent/crabgent-command/: Cargo.toml
crabgent/crabgent-command-compact/: Cargo.toml
crabgent/crabgent-command-goal/: Cargo.toml
crabgent/crabgent-command-model/: Cargo.toml
crabgent/crabgent-core/: Cargo.toml
crabgent/crabgent-cron/: Cargo.toml
crabgent/crabgent-embedding-fastembed/: Cargo.toml
crabgent/crabgent-examples/: Cargo.toml
crabgent/crabgent-hook-compact/: Cargo.toml
crabgent/crabgent-hook-divergence/: Cargo.toml
crabgent/crabgent-hook-goal/: Cargo.toml
crabgent/crabgent-hook-inject/: Cargo.toml
crabgent/crabgent-hook-log/: Cargo.toml
crabgent/crabgent-hook-subprocess/: Cargo.toml
crabgent/crabgent-log/: Cargo.toml
crabgent/crabgent-mcp-client/: Cargo.toml
crabgent/crabgent-mcp-server/: Cargo.toml
crabgent/crabgent-memory/: Cargo.toml
crabgent/crabgent-memory-consolidation/: Cargo.toml
crabgent/crabgent-prosody/: Cargo.toml
crabgent/crabgent-provider-anthropic/: Cargo.toml
crabgent/crabgent-provider-elevenlabs/: Cargo.toml
crabgent/crabgent-provider-google/: Cargo.toml
crabgent/crabgent-provider-openai/: Cargo.toml
crabgent/crabgent-provider-transport/: Cargo.toml
crabgent/crabgent-session/: Cargo.toml
crabgent/crabgent-store/: Cargo.toml
crabgent/crabgent-store-postgres/: Cargo.toml
crabgent/crabgent-store-sqlite/: Cargo.toml
crabgent/crabgent-task/: Cargo.toml
crabgent/crabgent-test-support/: Cargo.toml
crabgent/crabgent-thinking/: Cargo.toml
crabgent/crabgent-tool-audio/: Cargo.toml
crabgent/crabgent-tool-cache/: Cargo.toml
crabgent/crabgent-tool-calendar/: Cargo.toml
crabgent/crabgent-tool-compact/: Cargo.toml  NOTICE  README.md
crabgent/crabgent-tool-consolidation/: Cargo.toml
crabgent/crabgent-tool-cron/: Cargo.toml
crabgent/crabgent-tool-goal/: Cargo.toml
crabgent/crabgent-tool-memory/: Cargo.toml
crabgent/crabgent-tool-models/: Cargo.toml
crabgent/crabgent-tool-session/: Cargo.toml
crabgent/crabgent-tool-task/: Cargo.toml
crabgent/crabgent-tool-tts/: Cargo.toml
crabgent/docs/: loc-reduction-analysis.md  provider-model-discovery.md
crabgent/tools/: postgres-test-db.py  probe_provider_model_capabilities.py  probe_provider_models.py
(+831 files in other folders)
