[package]
name = "crabgent-channel-slack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Slack channel adapter for crabgent."

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
crabgent-channel.workspace = true
crabgent-command.workspace = true
crabgent-core.workspace = true
crabgent-thinking.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
crabgent-log.workspace = true

[dev-dependencies]
crabgent-channel-slack = { path = ".", features = ["test-support"] }
crabgent-store.workspace = true
crabgent-test-support.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
wiremock = "0.6.5"

[features]
test-support = []

[lints]
workspace = true
