[package]
name = "crabgent-command-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Model command adapter for crabgent command dispatch."

[dependencies]
async-trait.workspace = true
crabgent-command.workspace = true
crabgent-core.workspace = true
crabgent-store.workspace = true
# DEVIATION: cross-tool-dep, justified in arch.md (B5) - Tool-as-Command wrapper pattern
crabgent-tool-models.workspace = true
serde_json.workspace = true

[dev-dependencies]
crabgent-channel.workspace = true
crabgent-test-support = { workspace = true }
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
