[package]
name = "crabgent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "crabgent kernel: provider-agnostic agentic LLM loop"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
tiktoken_rs = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
crabgent-test-support = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
