[package]
name = "crabgent-hook-compact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Semantic conversation compaction hook for crabgent."

[lints]
workspace = true

[dependencies]
crabgent-core.workspace = true
crabgent-store = { workspace = true }
async-trait.workspace = true
serde_json.workspace = true
sha2 = { workspace = true }
crabgent-log.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
crabgent-test-support = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-util.workspace = true
