[package]
name = "crabgent-hook-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tracing bridge hook for crabgent kernel lifecycle events"

[lints]
workspace = true

[dependencies]
crabgent-core.workspace = true
crabgent-log.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
crabgent-test-support = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
default-bundle = ["crabgent-log/subscriber"]
