[package]
name = "crabgent-hook-subprocess"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Subprocess hook adapter for crabgent: spawn external scripts that read JSON events on stdin and return JSON Decisions on stdout"

[lints]
workspace = true

[dependencies]
crabgent-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
crabgent-log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
