[package]
name = "crabgent-mcp-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP client adapter for crabgent."

[dependencies]
async-trait.workspace = true
crabgent-core.workspace = true
crabgent-log.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
httpmock.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true

[lints]
workspace = true
