[package]
name = "crabgent-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server adapter for crabgent."

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
lru.workspace = true
crabgent-core.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
crabgent-core.workspace = true
crabgent-test-support = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
