[package]
name = "crabgent-memory-consolidation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Memory consolidation pipeline primitives for crabgent."

[lints]
workspace = true

[dependencies]
crabgent-core.workspace = true
crabgent-store.workspace = true
crabgent-memory.workspace = true
crabgent-cron.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
crabgent-log.workspace = true

[dev-dependencies]
proptest = { workspace = true }
