[package]
name = "crabgent-provider-elevenlabs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ElevenLabs audio provider adapter for crabgent"

[dependencies]
crabgent-core = { workspace = true }
crabgent-log = { workspace = true }
crabgent-provider-transport = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "json", "stream"] }
tokio-tungstenite = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
mockito = "1"
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
