[package]
name = "crabgent-provider-google"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Google Gemini provider implementation for crabgent"

[lints]
workspace = true

[dependencies]
crabgent-core = { workspace = true }
crabgent-provider-transport = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
crabgent-log = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true, features = ["test-util"] }
